tests/unit/language/errors/invalid_path_error.arche
// RUN: %arche build -o %t %s && %t
#import { io fmt }
main :: proc() {
  io.fopen_read("/nonexistent/path/to/file.csv")(fd:);
  fmt.printf("open() returned fd=%d\n", fd);
  fmt.assert(fd == 0, "should fail to open nonexistent file\n");
  fmt.printf("Invalid path error test PASSED\n");
  io.fclose(move fd)(_:);
}
